--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="body-bg">
 	
 
-	<img style="width:100%" src="./images/layout.jpg">
+	<img style="width:100%" src="./images/mockup-second.png">
 
 
 
